# arm_generic

./: .gitignore  README.md  main.py  pyproject.toml
examples/: generate_analysis.py
src/arm_generic/: functions.py
tests/: dry_run.py
